--- a/lessons/01_Types_and_Logic/01_Numbers_and_Strings.ipynb
+++ b/lessons/01_Types_and_Logic/01_Numbers_and_Strings.ipynb
@@ -38,9 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: John, Age: 14, Bank Account: 159.99, Colors: ['red', 'blue', 'green']\n"
+     ]
+    }
+   ],
    "source": [
     "# Run Me!\n",
     "# Assign to some variables. \n",
@@ -64,9 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age   :  <class 'int'>\n",
+      "Bank  :  <class 'float'>\n",
+      "Name  :  <class 'str'>\n",
+      "Colors:  <class 'list'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Run Me!\n",
     "\n",
@@ -92,9 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a + b =  30\n",
+      "a + b =  1020\n"
+     ]
+    }
+   ],
    "source": [
     "# add type integers\n",
     "\n",
@@ -202,9 +230,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0o45\n",
+      "0x25\n",
+      "0b100101\n"
+     ]
+    }
+   ],
    "source": [
     "# Conversion functions\n",
     "\n",
@@ -553,7 +591,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -567,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
