--- a/lessons/01_Types_and_Logic/02_Control_Flow.ipynb
+++ b/lessons/01_Types_and_Logic/02_Control_Flow.ipynb
@@ -14,7 +14,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is 10\n",
+      "a is less than 20\n"
+     ]
+    }
+   ],
    "source": [
     "# Conditionals \n",
     "\n",
@@ -28,7 +37,12 @@
     "\n",
     "if a < 20:\n",
     "    print(\"a is less than 20\")\n",
-    "    "
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -329,7 +343,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -343,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
