--- a/lessons/02_Loops/02_Loops_with_Range.ipynb
+++ b/lessons/02_Loops/02_Loops_with_Range.ipynb
@@ -23,9 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'range'>\n",
+      "range(0, 10)\n"
+     ]
+    }
+   ],
    "source": [
     "# Run Me!\n",
     "\n",
@@ -34,6 +43,13 @@
     "print(type(a))\n",
     "print(a)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -46,9 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "print(list(range(10)))"
    ]
@@ -70,9 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[101, 103, 105, 107, 109, 111, 113, 115, 117, 119]"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(range(101, 120, 2))"
    ]
@@ -92,13 +127,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2013\n",
+      "2015\n",
+      "2017\n",
+      "2019\n",
+      "2021\n",
+      "2023\n"
+     ]
+    }
+   ],
    "source": [
     "# Test yourself\n",
+    "born=2012 \n",
+    "age=12\n",
     "\n",
-    "..."
+    "for x in range(age):\n",
+    "    if(x+born)% 2==1:\n",
+    "        print(x+born)"
    ]
   },
   {
@@ -130,12 +182,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3988408640.py, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[128], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    1 snake\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Badgers!\n",
     "\n",
+    "born=2012 \n",
+    "age=12\n",
+    "\n",
+    "for x in range(age):\n",
+    "    if(x+born)% 2==1:\n",
+    "        print(x+born)\n",
+    "\n",
+    "\n",
+    "1 snake \n",
+    "2\n",
+    "3 mushroom\n",
+    "4\n",
+    "5 badger\n",
+    "6 mushroom\n",
+    "7\n",
+    "8\n",
+    "9\n",
+    "10 badger\n",
+    "11 \n",
+    "12 mushroom\n",
+    "13\n",
+    "14\n",
+    "15 Snake\n",
+    "16 \n",
+    "17\n",
+    "18 mushroom\n",
+    "19\n",
+    "20 badger\n",
+    "21\n",
+    "22\n",
+    "23\n",
+    "24 mushroom\n",
+    "25 badger\n",
+    "26\n",
+    "27 mushroom\n",
+    "28\n",
+    "29\n",
+    "30 badger\n",
     "for i in range(1, 31):\n",
     "    ...\n",
     " "
@@ -151,7 +250,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
